src/test/deca/context/valid/cast-compatible.deca
class A{
}
{
    Object o;
    A a;
    (Object)(a);
    (A)(o);
}
