src/test/deca/context/invalid/field-methodType.deca
class A{
    Type a;
    void Type() {}
}
